--- a/HelloWpf/MainWindow.xaml
+++ b/HelloWpf/MainWindow.xaml
@@ -5,8 +5,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HelloWpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="WPF XAML" Height="450" Width="800">
     <Grid>
-        
+        <Button x:Name="button" HorizontalAlignment="Center" Margin="0,172,0,0" VerticalAlignment="Top"
+                Width="200" Height="80">
+
+            <Button.Content>
+                <Grid>
+                    <TextBlock Foreground="White" FontSize="20" FontWeight="Bold" FontFamily="Lucida Handwriting">
+                        &lt; 
+                        کلیک نمایید
+                        &gt;
+                    </TextBlock>
+                </Grid>
+            </Button.Content>
+
+            <Button.Background>
+                <LinearGradientBrush>
+                    <GradientStop Color="Blue" Offset="0"></GradientStop>
+                    <GradientStop Color="BlueViolet" Offset="1"></GradientStop>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+
     </Grid>
 </Window>
